--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "eatRep"]
+	path = eatRep
+	url = https://github.com/weirichs/eatrep
+	shallow = true
+	registered = true
+[submodule "eatTools"]
+	path = eatTools
+	url = https://github.com/weirichs/eattools
+	shallow = true
+	registered = true
